--- a/blogpost.html
+++ b/blogpost.html
@@ -3,6 +3,7 @@
         <title>El titulillo</title>
     <link rel="stylesheet" href="estilos.css">
     <body>
+        <div id: "cabecera"> Cabecera </div>
         <h1>Vamo palante</h1>
         <p>Si o pa que</p>
         <p>Hagale pues mijo</p>
