--- a/blogpost.html
+++ b/blogpost.html
@@ -3,9 +3,12 @@
         <title>El titulillo</title>
     <link rel="stylesheet" href="estilos.css">
     <body>
-        <div id: "cabecera"> Cabecera </div>
-        <h1>Vamo palante</h1>
+        <div id= "container">
+        <div id= "cabecera"> El blog más lindo de todos</div>
+        <div><h1>Vamo palante</h1>
         <p>Si o pa que</p>
         <p>Hagale pues mijo</p>
-    </body>
+        </div>
+        </div>
+        </body>
 </html>
