cambie fuente y agregué paarrafos

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,8 @@
         <h1>Vamo palante</h1>
         <p>Si o pa que</p>
         <p>Hagale pues mijo</p>
+        <p>Un espacio.</p>
+        <p>Un silencio.</p>
+        <p>Ya le estoy haciendo</p>
     </body>
 </html>
