color azul, título polémico y alineado derecha

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="estilos.css">
     <body>
         <div id= "container">
-        <div id= "cabecera"> El blog más lindo de todos</div>
+        <div id= "cabecera"> El blog más polémico de todos</div>
         <div><h1>Vamo palante</h1>
         <p>Si o pa que</p>
         <p>Hagale pues mijo</p>
