Cambio de título
Porque puedo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulillo</title>
+        <title>¡Bienvenido a este blog!</title>
     <link rel="stylesheet" href="estilos.css">
     <body>
         <div id= "container">
