organicé el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,5 +12,8 @@
         <p>Un silencio.</p>
         <p>Ya le estoy haciendo</p>
         </div>
+        <div id= "footer">
+            <p>Hecho con amor en Malta <3</p>
+        </div>
     </body>
 </html>
