--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id= "cabecera"> El blog más polémico de todos</div>
         <div><h1>Vamo palante</h1>
         <p>Si o pa que</p>
-        <p>Hagale pues mijo</p>
+        <p>H&aacute;gale pues mijo</p>
         <p>Un espacio.</p>
         <p>Un silencio.</p>
         <p>Ya le estoy haciendo</p>
